--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Quicksand:wght@500&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body{
   background-image: url("img/bg.jpg");
 }
@@ -25,13 +30,14 @@ body{
 
 nav{
   background-color: rgb(255, 255, 255);
-  border: 2px dashed black;
+  border-bottom: 2px dashed black;
   display: flex;        
   height: 150px;
   width: 100%;
   font-family: 'Amatic SC', cursive;
   font-weight: bold; 
-  border-radius: 20px;  
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;  
 }
 
 nav ul{
@@ -50,13 +56,13 @@ nav li {
 
 nav li a {
   transition: 0.2s ease-in;
-  font-size: 32px;  
+  font-size: 40px;  
   color: rgb(25, 25, 25);  
   text-decoration: none;  
 }
 
 nav li a:hover{
-  font-size: 2.3em;
+  font-size: 50px;
   transition: 0.2s ease-in-out;
 }
 
@@ -148,6 +154,7 @@ nav li a:hover{
   background-color: rgba(255,255,255,1);
   box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.5);
   border: 1px solid rgba(0,128,255,1);
+  cursor: pointer;
 }
 
 .img-knjiga{
@@ -260,3 +267,34 @@ nav li a:hover{
   cursor: pointer;
 }
 
+#footer{
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  border-top: 2px dashed black;
+  white-space: nowrap;
+  margin-top: 70px;
+  border-radius: 20px;
+}
+
+#levi-futer{
+  margin-left: 40px;
+  width: 85%;
+  display: inline-block;
+}
+
+#levi-futer ul{
+  font-family: 'Quicksand', sans-serif;
+}
+
+#levi-futer ul li{
+  display: inline-block;
+  padding-top: 15px;
+  padding-left: 15px;
+  
+}
+
+#desni-futer{
+  font-family: 'Quicksand', sans-serif;
+  display: inline-block;
+}
