--- a/stranice/knjige/knjigeStyles.css
+++ b/stranice/knjige/knjigeStyles.css
@@ -30,7 +30,7 @@ body{
 
 nav{
   background-color: rgb(255, 255, 255);
-  border: 2px dashed black;
+  border-bottom: 2px dashed black;
   display: flex;        
   height: 150px;
   width: 100%;
@@ -69,6 +69,7 @@ nav li a:hover{
     font-size: 64px;
     font-weight: bold;
     font-family: 'Amatic SC', cursive; 
+    background-color: rgba(255,255,255,0.7);
 }
 #meni-selekt{
     margin-top: 25px;
@@ -113,7 +114,7 @@ nav li a:hover{
     display: inline-block;
     text-align: center;
     margin-left: 20px;
-    margin-right: 20px;7 6
+    margin-right: 20px;
 }
 
 .knjiga-container{
